@@ -4,7 +4,7 @@ import org.springframework.http.HttpStatus;
 import org.springframework.web.server.ResponseStatusException;
 
 public class EntityDuplicateException extends ResponseStatusException {
-    public EntityDuplicateException(String nameField, String value) {
-        super(HttpStatus.CONFLICT, "Duplicate entity by field: [%s] [%s]".formatted(nameField, value));
+    public EntityDuplicateException(final String nameClass, final String error) {
+        super(HttpStatus.CONFLICT, String.format(": %s : %s", nameClass, error));
     }
 }
